bin/testsuite/tests/compiler/src/errors/compiler4426.swg
#global testerror "Err0103"
using Swag

func toto(x: &&&A) {}

#test
{
}
